<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NoteAddActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextTitle"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/edit_text_title_hint" android:layout_marginTop="16dp"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextDescription" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextTitle" android:hint="@string/edit_text_description_hint"/>

    <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/radioGroupPriority" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextDescription" android:orientation="horizontal">
        <RadioButton
                android:text="@string/radio_button_baja"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rbBaja" android:layout_weight="1"
                android:background="@color/low_priority"/>
        <RadioButton
                android:text="@string/radio_button_media"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rbMedia" android:layout_weight="1"
                android:background="@color/medium_priority"/>
        <RadioButton
                android:text="@string/radio_button_alta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rbAlta" android:layout_weight="1"
                android:background="@color/high_priority"/>
    </RadioGroup>

    <Button
            android:text="@string/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonAdd"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

</android.support.constraint.ConstraintLayout>